cmake_minimum_required(VERSION 3.1)
project(RoboCarMonolith)
set(CMAKE_CXX_STANDARD 17)
set(CURL_LIBRARY "-lcurl")
find_package(CURL REQUIRED)
file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
add_executable(RoboCarMonolith ${SOURCE_FILES})
include_directories(${CURL_INCLUDE_DIR})
target_link_libraries(RoboCarMonolith curl)
