cmake_minimum_required(VERSION 3.7)
project(RoboCarMonolith)
set(CMAKE_CXX_COMPILER "/usr/local/gcc-8.1.0/bin/g++-8.1.0")
set(COMPILER_FLAGS "-std=c++17")
add_definitions(${COMPILER_FLAGS})
set(CURL_LIBRARY "-lcurl")
find_package(CURL REQUIRED)
file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
add_executable(RoboCarMonolith ${SOURCE_FILES})
include_directories(${CURL_INCLUDE_DIR})
target_link_libraries(RoboCarMonolith curl)
